# upload_service

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: abort.rs  backend.rs  browsersafe.rs  file_meta.rs  finish_upload.rs  full_upload.rs  main.rs  partial_upload.rs  preflight.rs
