[package]
name = "upload_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-stream = "*"
axum = { version = "0.7", features = ["http2","multipart"] }
tokio = { version = "1.0", features = ["rt-multi-thread","signal","process"] }
tokio-util = { version = "0.7.8", features = ["io"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "^0.3.8"
serde = {version="^1.0.164",features=["derive"]}
serde_json ="1"
image = {git="https://github.com/kozakura913/image.git",branch="main"}
webp = { version = "0.3.0", default-features = false }
resvg = {version="0.41",features = [ "text","memmap-fonts","raster-images" ] }
rexif = "0.7"
avif-decoder_dep = { path="./avif-decoder_dep" ,optional = true }
chrono = "0.4"
fast_image_resize = "3.0"
rust-s3 = { git = "https://github.com/kozakura913/rust-s3" ,branch="with_metadata", default-features = false, features = ["tokio-rustls-tls", "fail-on-err"] }
uuid = { version = "1.10", features = ["v4"] }
redis = { version = "0.26", features = ["tokio-comp"] }
sha2 = "0.10"
base64 = "0.22.1"
md5 = "0.7.0"
nsfw = { version = "0.2.0", default-features = false }
reqwest = { version = "0.12", default-features = false , features = ["rustls-tls", "charset"] } 
blurhash = "0.2.3"
infer = { version = "0.16", default-features = false }
percent-encoding = "2.3.1"
ndarray = "0.15.6"
tract-data = "0.21.6"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
